--- a/catalogSiteExample/css/style.css
+++ b/catalogSiteExample/css/style.css
@@ -188,7 +188,10 @@ h4{
 	color:gray;
 }
 
-
+.row {
+    margin-right: 0;
+    margin-left: 0;
+}
 
 /* nav levels*/
 
@@ -301,4 +304,8 @@ footer
 	color: darkgrey;
     text-align: center;
 }
+#myIframe
+{
+    width: 100%;
+    height: 640px;
 }
