--- a/catalogSiteExample/css/style.css
+++ b/catalogSiteExample/css/style.css
@@ -275,6 +275,7 @@ h4{
 	padding-left: inherit;
 	font-size: 15px;
 	font-weight: 500;
+	    z-index: 999;
 }
 .header .nav li .second-nav li{
 	position: relative;
@@ -307,5 +308,5 @@ footer
 #myIframe
 {
     width: 100%;
-    height: 640px;
+    height: 770px;
 }
